fixed boreder and gap

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -19,7 +19,7 @@
 @media screen and (max-width: 480px) {
   .footer {
     margin-left: 19px;
-    max-width: 282px;
+    max-width: 100%;
   }
 
   .footer__description {
