--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,7 +1,7 @@
 .header {
   margin-top: 45px;
   border-bottom: 1px solid rgb(84 84 84 / 0.7);
-  margin-bottom: 36px;
+  gap: 36px;
 }
 
 .header.page__section {
