--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   padding-top: 40px;
+  margin-bottom: 40px;
 }
 
 .profile__info {
